kubernetes/fluxcd/infra/configs/staging/gateway/twintails-https-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: dashboard
      protocol: HTTP
      hostname: "dashboard.docker.local"
      port: 8888
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              dashboard-gateway-access: "true"

    - name: twintails-http
      protocol: HTTP
      hostname: "*.twintailsare.moe"
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: twintails-https
      protocol: HTTPS
      hostname: "*.twintailsare.moe"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: twintailsare-moe-tls
            kind: Secret
